fix texts, fix text wrap issue

--- a/src/components/MonthlyPaymentDisplay.module.css
+++ b/src/components/MonthlyPaymentDisplay.module.css
@@ -11,7 +11,7 @@
   background: #646cff;
   color: white;
   text-align: center;
-  text-wrap: nowrap;
+  white-space: nowrap;
   top: 0;
   bottom: 0;
   left: 0;
